--- a/environment.yml
+++ b/environment.yml
@@ -8,17 +8,7 @@ dependencies:
 - astropy >= 4.0
 - scipy >= 1.4
 - matplotlib >= 3.1
-- numba >= 0.39.0
 - pyqt >= 5
-- pyyaml >= 5.1
-- configobj >= 5.0.6
-- scikit-learn >= 0.20
-- ipython >= 7.2.0
-- ginga >= 3.0
-- packaging >= 19.0
-- linetools >= 0.2
-- extension-helpers >= 0.1
+- pypeit >= 1.1.0
 - pytest >= 3.0.7
 - yattag >= 1.13
-- pip:
-  - PypeIt >= 1.1.0
