--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,35 +8,29 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8]
-
+      defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
+          environment-file: environment.yml
+          activate-environment: dbsp_drp
           python-version: ${{ matrix.python-version }}
+          channels: conda-forge
+          channel-priority: strict
 
-      - name: Setup conda
-        uses: s-weigand/setup-conda@v1
-        with:
-          update-conda: true
-          python-version: ${{ matrix.python-version }}
-
-      # env activation as suggested by @s-weigand
-      - name: Conda environment creation
-        # might need 
-        # conda env create -f environment.yml python=${{ matrix.python-version }}
+      - name: Install DBSP_DRp
         run: |
-          conda config --add channels conda-forge
-          conda config --set channel_priority strict
-          conda env create -f environment.yml
-          source activate dbsp_drp
+          conda info
+          conda config --show-sources
+          conda config --show
           pip install -e .
           conda list
           pip list
 
       - name: Testing with pytest
         run: |
-          source activate dbsp_drp
           pytest
