--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,8 @@ dependencies:
 - astropy >= 4.0
 - scipy >= 1.4
 - matplotlib >= 3.1
-- pyqt >= 5
-- pypeit >= 1.1.0
+- pyside2 >= 5.12
+- pypeit >= 1.2.0
 - pytest >= 3.0.7
 - yattag >= 1.13
 - tqdm
