update environment, docs/reqs.txt, setup.cfg

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,17 +1,9 @@
 astropy
 numpy
-pypeit
-matplotlib
 scipy
-PyQt5
+matplotlib
 yattag
-PyYAML
-ipython
-numba
 configobj
-scikit-learn
-ginga
-packaging
-linetools
-extension-helpers
 pytest
+pypeit
+tqdm
