--- a/setup.cfg
+++ b/setup.cfg
@@ -19,18 +19,12 @@ install_requires=
     astropy
     scipy
     matplotlib
-    numba
-    pyyaml
     configobj
-    scikit-learn
-    ipython
-    ginga
     packaging
-    linetools
-    extension-helpers
     pytest
     yattag
     pypeit
+    tqdm
 scripts=
     bin/dbsp_reduce
     bin/dbsp_ql
