add license to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,8 @@ description = "Data Reduction Pipeline for Palomar's Double Spectrograph"
 long_description = file: README.md
 author = Milan S. Roberson
 author_email = mroberso@caltech.edu
+license = BSD-3
+license_file = LICENSE
 url = https://github.com/finagle29/DBSP_DRP
 github_project = finagle29/DBSP_DRP
 
