--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,6 +16,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       -
         name: Docker meta quicklook
         id: meta_ql
@@ -25,6 +26,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=edge,branch=develop
+            type=ref,event=pr
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -34,12 +36,12 @@ jobs:
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - 
+
+      -
         name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -61,7 +63,7 @@ jobs:
       -
         name: Quicklook image digest
         run: echo ${{ steps.docker_build_ql.outputs.digest }}
-      
+
       -
         name: Docker meta full drp
         id: meta_drp
@@ -71,6 +73,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=edge,branch=develop
+            type=ref,event=pr
       -
         name: Build and push full drp
         id: docker_build_drp
