--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -54,6 +54,7 @@ jobs:
         id: docker_build_ql
         uses: docker/build-push-action@v2
         with:
+          context: .
           target: dbsp_ql
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_ql.outputs.tags }}
@@ -79,6 +80,7 @@ jobs:
         id: docker_build_drp
         uses: docker/build-push-action@v2
         with:
+          context: .
           target: dbsp_drp
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_drp.outputs.tags }}
