--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,10 +13,11 @@ on:
 
 
 jobs:
-  docker:
+  build_quicklook:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       -
         name: Docker meta quicklook
         id: meta_ql
@@ -27,12 +28,15 @@ jobs:
             type=semver,pattern={{version}}
             type=edge,branch=develop
             type=ref,event=pr
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
       -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
@@ -49,6 +53,7 @@ jobs:
           key: ${{ runner.os }}-single-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-single-buildx
+
       -
         name: Build and push quicklooks
         id: docker_build_ql
@@ -61,9 +66,46 @@ jobs:
           labels: ${{ steps.meta_ql.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
+
       -
         name: Quicklook image digest
         run: echo ${{ steps.docker_build_ql.outputs.digest }}
+
+      -
+        name: Move cache
+        run:
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+  build_full_drp:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      -
+        name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-single-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-single-buildx
 
       -
         name: Docker meta full drp
@@ -75,6 +117,7 @@ jobs:
             type=semver,pattern={{version}}
             type=edge,branch=develop
             type=ref,event=pr
+
       -
         name: Download from Google Drive
         run: |
@@ -97,14 +140,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_drp.outputs.tags }}
           labels: ${{ steps.meta_drp.outputs.labels }}
-          cache-from: type=local,src=/tmp/.buildx-cache-new
-          cache-to: type=local,dest=/tmp/.buildx-cache-new-new
+          cache-from: type=local,src=/tmp/.buildx-cache
+
       -
         name: Full DRP image digest
         run: echo ${{ steps.docker_build_drp.outputs.digest }}
-      -
-        name: Move cache
-        run:
-          rm -rf /tmp/.buildx-cache
-          rm -rf /tmp/.buildx-cache-new
-          mv /tmp/.buildx-cache-new-new /tmp/.buildx-cache
