--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,7 +40,7 @@ jobs:
 
       -
         name: Login to DockerHub
-        if: github.event_name != 'pull_request'
+        #if: github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -57,7 +57,8 @@ jobs:
         with:
           context: .
           target: dbsp_ql
-          push: ${{ github.event_name != 'pull_request' }}
+          #push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta_ql.outputs.tags }}
           labels: ${{ steps.meta_ql.outputs.labels }}
 
