add adjust_splicing script, set red_mult=1

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ scripts=
     bin/dbsp_reduce
     bin/dbsp_ql
     bin/dbsp_show
+    bin/dbsp_adjust_splicing
 
 [options.package_data]
 * = data/*
