fix pypi upload

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = DBSP_DRP
 description = "Data Reduction Pipeline for Palomar's Double Spectrograph"
 long_description = file: README.md
+long_description_content_type = text/markdown
 author = Milan S. Roberson
 author_email = mroberso@caltech.edu
 license = BSD-3
