update description and author email

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = DBSP_DRP
-description = "Data Reduction Pipeline for Palomar's Double Spectrograph"
+description = "Automated Data Reduction Pipeline for Palomar's Double Spectrograph"
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Milan S. Roberson
-author_email = mroberso@caltech.edu
+author_email = finagle29@gmail.com
 license = BSD-3
 license_file = LICENSE
 url = https://github.com/finagle29/DBSP_DRP
