add dbsp_splice script for manual splicing
also added minimal docs, factored out the adjust_splicing_GUI into its own function that dbsp_splice / manual_splice.py calls

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ scripts=
     bin/dbsp_ql
     bin/dbsp_show
     bin/dbsp_adjust_splicing
+    bin/dbsp_splice
 
 [options.package_data]
 * = data/*
