--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
 - numpy >= 1.16.0
 - astropy >= 4.0
 - scipy >= 1.4
-- matplotlib >= 3.1
+- matplotlib >=3.1,<3.5
 - pyside2 >= 5.12
 - pypeit == 1.6.0
 - pytest >= 3.0.7
