--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -20,7 +20,7 @@ conda:
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.8"
+    python: "mambaforge-4.10"
   jobs:
     pre_install:
       - git update-index --assume-unchanged environment.yml docs/source/conf.py
