readme/pypi/docs name change

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = DBSP_DRP
 description = "Automated Data Reduction Pipeline for Palomar's Double Spectrograph"
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = Milan S. Roberson
+author = Milan Sharma Mandigo-Stoba
 author_email = finagle29@gmail.com
 license = BSD-3
 license_file = LICENSE
