--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 - defaults
 dependencies:
 - python >= 3.8
-- numpy >= 1.16.0
+- numpy >= 1.16.0, <1.24
 - astropy >= 4.0
 - scipy >= 1.4
 - matplotlib >=3.1,<3.5
